# mcp-sophon

./: .gitignore  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  server.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench-nightly.yml  ci.yml  mcp-registry.yml  release.yml
benchmarks/: README.md  audit_adversarial.py  audit_rate_limit.py  audit_v030_baseline.py  baseline.json  cold_start_and_footprint.py  compress_output_per_command.py  latency_reliability.py  llm_cli.py  llmlingua_compare.py  locomo_cross_model.py  locomo_hyde_ab.py  locomo_mem0lite.py  locomo_multihop_ab.py  locomo_p1_p2_ab.py  locomo_pathA_ab.py  locomo_react_multihop.py  locomo_retrieval.py  locomo_v031_vs_v030.py  locomo_v032_ab.py  prompt_compression_extended.py  real_session_capture.py  real_session_deep_dive.py  real_session_filereads.py  real_session_holistic.py  real_session_search.py  real_session_shell.py  repo_qa.py  repos_recall.py  repos_scan.py  rolling_summary_effect.py  run_all_with_baseline.py  session_scaling_curve.py  session_token_economics.py  sophon_plus_mem0.py  sophon_plus_prompt_caching.py  tool_call_dedup_effect.py
benchmarks/_deprecated/: README.md  locomo_oracle_label.py  locomo_retrieval_oracle.py  locomo_v040_vs_v050.py  locomo_v5_vs_v4.py
npm/: LICENSE  README.md  install.js  package.json
sophon/: .gitignore  Cargo.toml  README.md  sophon.toml
sophon-py/: Cargo.toml  README.md  pyproject.toml
sophon-py/python/sophon/: __init__.py
sophon-py/src/: lib.rs
sophon-py/tests/: test_sophon.py
sophon/crates/cli-hooks/: Cargo.toml
sophon/crates/cli-hooks/src/: installer.rs  lib.rs  rewriter.rs
sophon/crates/codebase-navigator/: Cargo.toml
sophon/crates/codebase-navigator/plugins/: haskell.toml
sophon/crates/codebase-navigator/src/: digest.rs  lib.rs  navigator.rs  ranker.rs  scanner.rs  types.rs
sophon/crates/codebase-navigator/src/extractors/: c_cpp.rs  generic.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  plugin.rs  python.rs  ruby.rs  rust.rs  swift.rs
sophon/crates/codebase-navigator/src/extractors/tree_sitter/: cpp_ts.rs  go_ts.rs  java_ts.rs  javascript_ts.rs  kotlin_ts.rs  mod.rs  php_ts.rs  python_ts.rs  ruby_ts.rs  rust_ts.rs  swift_ts.rs  typescript_ts.rs
sophon/crates/codebase-navigator/src/extractors/tree_sitter/queries/: cpp.scm  go.scm  java.scm  javascript.scm  kotlin.scm  php.scm  python.scm  ruby.scm  rust.scm  swift.scm  typescript.scm
sophon/crates/codebase-navigator/tests/: navigate_e2e.rs
sophon/crates/delta-streamer/: Cargo.toml
sophon/crates/delta-streamer/benches/: delta_diff_bench.rs
sophon/crates/delta-streamer/src/: differ.rs  hasher.rs  lib.rs  patcher.rs  protocol.rs  state.rs
sophon/crates/delta-streamer/tests/: integration_test.rs
sophon/crates/delta-streamer/tests/fixtures/: large_file.rs
sophon/crates/fragment-cache/: Cargo.toml
sophon/crates/fragment-cache/src/: decoder.rs  detector.rs  encoder.rs  lib.rs  stats.rs  store.rs
sophon/crates/fragment-cache/tests/: integration_test.rs
sophon/crates/mcp-integration/: Cargo.toml
sophon/crates/mcp-integration/src/: config.rs  handlers.rs  jsonrpc.rs  lib.rs  main.rs  runtime_flags.rs  server.rs  tools.rs
sophon/crates/mcp-integration/tests/: cancellation_e2e.rs  integration_test.rs
sophon/crates/memory-manager/: Cargo.toml
sophon/crates/memory-manager/benches/: compress_history_bench.rs
sophon/crates/memory-manager/src/: fact_cards.rs  fact_extractor.rs  index.rs  lib.rs  llm_client.rs  llm_reranker.rs  message.rs  multihop.rs  query_decomposer.rs  query_rewriter.rs  question_classifier.rs  react.rs  reconstructor.rs  summarizer.rs  tail_summary.rs
sophon/crates/memory-manager/src/graph/: extract.rs  ingest.rs  mod.rs  query.rs  store.rs  types.rs
sophon/crates/memory-manager/tests/: integration_test.rs
sophon/crates/output-compressor/: Cargo.toml
sophon/crates/output-compressor/src/: dedup.rs  detector.rs  lib.rs  strategy.rs  truncate.rs
sophon/crates/output-compressor/src/filters/: curl_json.rs  curl_verbose.rs  docker.rs  filesystem.rs  generic.rs  git.rs  kubectl.rs  mod.rs  npm_install.rs  pip_install.rs  terraform.rs  test_runners.rs
sophon/crates/prompt-compressor/: Cargo.toml
sophon/crates/prompt-compressor/benches/: compress_prompt_bench.rs
sophon/crates/prompt-compressor/src/: analyzer.rs  cache.rs  compressor.rs  lib.rs  parser.rs
sophon/crates/prompt-compressor/tests/: analyzer_test.rs  integration_test.rs  parser_test.rs
sophon/crates/semantic-retriever/: Cargo.toml
sophon/crates/semantic-retriever/src/: bm25.rs  chunker.rs  entity_graph.rs  fusion.rs  index.rs  lib.rs  reranker.rs  retriever.rs  store.rs
sophon/crates/semantic-retriever/src/embedder/: bert.rs  bge.rs  hash.rs  mod.rs
sophon/crates/semantic-retriever/tests/: e2e_retriever.rs
sophon/crates/sophon-core/: Cargo.toml
sophon/crates/sophon-core/src/: error.rs  hashing.rs  lib.rs  tokenizer.rs  tokens.rs
sophon/crates/sophon-storage/: Cargo.toml
sophon/crates/sophon-storage/src/: error.rs  lib.rs  schema.rs  sqlite.rs
sophon/fuzz/: Cargo.toml
sophon/fuzz/fuzz_targets/: fragment_detector.rs  output_compressor.rs  prompt_parser.rs
sophon/tests/fixtures/: claude_system_prompt.txt  large_dataset.csv  large_file.rs  long_conversation.json
