[package]
name = "sophon-py"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "_sophon"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
prompt-compressor = { path = "../sophon/crates/prompt-compressor" }
memory-manager = { path = "../sophon/crates/memory-manager" }
output-compressor = { path = "../sophon/crates/output-compressor" }
sophon-core = { path = "../sophon/crates/sophon-core" }
serde_json = "1.0"
