[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "sophon"
version = "0.1.1"
description = "Python bindings for Sophon — honest token economics for MCP agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "sophon._sophon"
