[workspace]
members = [
    "crates/sophon-core",
    "crates/prompt-compressor",
    "crates/memory-manager",
    "crates/delta-streamer",
    "crates/fragment-cache",
    "crates/semantic-retriever",
    "crates/output-compressor",
    "crates/cli-hooks",
    "crates/codebase-navigator",
    "crates/sophon-storage",
    "crates/mcp-integration",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["Sophon Contributors"]

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"
once_cell = "1.20"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tiktoken-rs = "0.6"
toml = "0.8"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
