[package]
name = "codebase-navigator"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
walkdir = "2.5"
ignore = "0.4"
rayon = "1.10"
sophon-core = { path = "../sophon-core" }

# Opt-in AST-level extraction via tree-sitter. The default build keeps
# the deterministic regex backend so the binary stays small. Enable with
# `--features codebase-navigator/tree-sitter` to get:
#   - multi-line signature capture
#   - no false positives from comments / strings that contain keywords
#   - proper method-vs-function distinction on impl blocks
# Cost: +~5 MB in the release binary, C compilation at build time.
tree-sitter = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
tree-sitter-javascript = { version = "0.25", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.25", optional = true }
tree-sitter-ruby = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }
tree-sitter-php = { version = "0.23", optional = true }
tree-sitter-kotlin-ng = { version = "1.1", optional = true }
tree-sitter-swift = { version = "0.7", optional = true }

[features]
default = []
tree-sitter = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-python",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-go",
    "dep:tree-sitter-ruby",
    "dep:tree-sitter-java",
    "dep:tree-sitter-cpp",
    "dep:tree-sitter-php",
    "dep:tree-sitter-kotlin-ng",
    "dep:tree-sitter-swift",
]

[dev-dependencies]
tempfile = "3"
