[package]
name = "delta-streamer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sophon-core = { path = "../sophon-core" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "delta_diff_bench"
harness = false
