[package]
name = "memory-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
once_cell.workspace = true
rayon = "1.10"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
uuid.workspace = true
sophon-core = { path = "../sophon-core" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "compress_history_bench"
harness = false
