[package]
name = "output-compressor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
once_cell.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sophon-core = { path = "../sophon-core" }

[dev-dependencies]
tempfile = "3"
